JDK enhancements